<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <parent>
        <artifactId>lutece-global-pom</artifactId>
        <groupId>fr.paris.lutece.tools</groupId>
        <version>4.0.4</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>
    <groupId>fr.paris.lutece.plugins</groupId>
    <artifactId>plugin-appointment</artifactId>
    <packaging>lutece-plugin</packaging>
    <version>2.0.0-SNAPSHOT</version>
    <name>Lutece appointment plugin</name>
    <properties>  
        <componentName>appointment</componentName>
        <core.version>6.0.1</core.version>    
        <genericattributes.version>1.2.1</genericattributes.version>
        <jackson.version>2.8.4</jackson.version>
        <java.version>1.8</java.version>
        <jiraComponentId>12273</jiraComponentId>
        <jiraProjectName>RENDEZVOUS</jiraProjectName>
        <maven.version>3.5.1</maven.version>    
        <regularexpression.version>3.0.3</regularexpression.version>                        
        <workflow.version>4.3.6-SNAPSHOT</workflow.version>    
        <rest.version>3.1.0</rest.version>
    </properties>
    <repositories>
        <repository>
            <id>lutece</id>
            <name>luteceRepository</name>
            <url>http://dev.lutece.paris.fr/maven_repository</url>
            <layout>default</layout>
        </repository>
    </repositories>
    <dependencies>
        <dependency>
            <groupId>fr.paris.lutece</groupId>
            <artifactId>lutece-core</artifactId>
            <version>${core.version}</version>
            <type>lutece-core</type>
        </dependency>
        <dependency>
            <groupId>fr.paris.lutece.plugins</groupId>
            <artifactId>plugin-genericattributes</artifactId>
            <version>${genericattributes.version}</version>
            <type>lutece-plugin</type>
        </dependency>
        <dependency>
            <groupId>fr.paris.lutece.plugins</groupId>
            <artifactId>plugin-workflow</artifactId>
            <version>${workflow.version}</version>
            <type>lutece-plugin</type>
        </dependency>           
        <dependency>
            <groupId>fr.paris.lutece.plugins</groupId>
            <artifactId>plugin-regularexpression</artifactId>
            <version>${regularexpression.version}</version>
            <type>lutece-plugin</type>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.datatype</groupId>
            <artifactId>jackson-datatype-jsr310</artifactId>
            <version>${jackson.version}</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.module</groupId>
            <artifactId>jackson-module-parameter-names</artifactId>
            <version>${jackson.version}</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.datatype</groupId>
            <artifactId>jackson-datatype-jdk8</artifactId>
            <version>${jackson.version}</version>
        </dependency>
        <dependency>
    		<groupId>fr.paris.lutece.plugins</groupId>
    		<artifactId>plugin-rest</artifactId>
    		<version>${rest.version}</version>
    		<type>lutece-plugin</type>
		</dependency>      
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven.version}</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>
        </plugins>
    </build>    
    <scm>
        <connection>scm:git:https://github.com/lutece-secteur-public/gru-plugin-appointment.git</connection>
        <developerConnection>scm:git:https://github.com/lutece-secteur-public/gru-plugin-appointment.git</developerConnection>
        <url>https://github.com/lutece-secteur-public/gru-plugin-appointment.git</url>    
    </scm> 
</project>
